<resources>
    <string name="app_name">Book App</string>
    <string name="new_user_signup">New User ? <b>SignUp</b></string>


    <string name="shuffle_btn">Shuffle</string>
    <string name="paused_text"><![CDATA[<b>إسم مدرستنا " إقرأ " فمن المخجل أن تكون واحدا منّا وأنت لا تقرأ</b>]]></string>

    <string name="favourites_btn">Favourites</string>
    <string name="playlist_btn">Playlists</string>
    <string name="total_songs">Total Songs</string>
    <string name="World_of_Book">World of Book</string>
    <string name="song_name">Song Name</string>
    <string name="back_btn">Back</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading..</string>
    <string name="repeat_btn">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_icon">Icon</string>
    <string name="text_nav">Welcome to\nWorld of Music</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="song_album">Song Album</string>
    <string name="min_15">15 Minutes</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_60">60 Minutes</string>
    <string name="search_view">Search View</string>
    <string name="song_img">Song Image</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_delete">Delete</string>
    <string name="user_name">Your Name</string>
    <string name="add_song">Add</string>
    <string name="remove_all">Remove All</string>
    <string name="search_song">Search Song</string>
    <string name="topic_feedback">Topic i.e. Suggestion, Error, etc.</string>
    <string name="email_feedback">Email Address (Optional)</string>
    <string name="send">Send</string>
    <string name="set_theme">Set Theme</string>
    <string name="sort_by">Sort By</string>
    <string name="version_name">Version Name</string>
    <string name="play_next">Play Next</string>
    <string name="play_next_note">Tip: Long Press On Any Video To Add It Into Play Next. &#128522; </string>
    <string name="favourite_note">Tip: Play Music And Click On &#10084; To Add It Into Favourites. </string>
    <string name="playlist_note">Tip: Click On ➕ To Create New Playlist. </string>
    <string name="title_activity_profil">profilActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="world_of_books">عالم الكتاب</string>


</resources>